https://issues.apache.org/jira/browse/AMQCPP-529

Default to platform defaults for stack size of threads.